find_package(Doxygen)
if(DOXYGEN_FOUND AND NOT NO_DOCS)
	if(DOXYGEN_DOT_FOUND)
		set(DOCUMENTATION_HAVE_DOT YES)
	endif(DOXYGEN_DOT_FOUND)

	configure_file(
		${CMAKE_CURRENT_SOURCE_DIR}/SDK.in ${CMAKE_CURRENT_BINARY_DIR}/SDK.doxygen
	)

	ADD_CUSTOM_TARGET(developer-doc
		COMMAND ${DOXYGEN_EXECUTABLE} 
		${CMAKE_CURRENT_BINARY_DIR}/SDK.doxygen
	)
endif()
